--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -9,6 +9,6 @@
                 ios.position="right"
                 android.position="popup"></ActionItem>
 </ActionBar>
-<StackLayout>
-    <router-outlet></router-outlet>
-</StackLayout>
+<GridLayout columns="*" rows="*">
+    <router-outlet col="0" row="0"></router-outlet>
+</GridLayout>
