--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -1,21 +1,22 @@
-<RadSideDrawer #sideDrawer>
+<RadSideDrawer gesturesEnabled="true" [allowEdgeSwipe]="_activatedUrl != '/enter'" #sideDrawer>
     <GridLayout tkDrawerContent rows="56, *" class="fix-release-color">
-        <StackLayout class="side-title" row="0">
-            <Label [text]="'<' + app_settings?.competition?.name + '>'" class="h2"></Label>
+        <StackLayout *ngIf="_competition.selected_competition" class="side-title" row="0">
+            <Label [text]="'<' + (_competition?.selected_competition_id$|async)?.title + '>'" class="h2"></Label>
         </StackLayout>
         <ScrollView row="1">
             <StackLayout>
-<!--                <Label [text]="_activatedUrl"></Label>-->
-                <Label [text]="'Scan'|L" (tap)="navigateTo('scan')" [class.active]="_activatedUrl === '/scan'"
-                       class="side-label font-weight-bold"></Label>
-                <Label [text]="'Home'|L" (tap)="navigateTo('home', {clearHistory: true})" [class.active]="_activatedUrl === '/home'" class="side-label"></Label>
-                <Label [text]="'Athlets'|L" (tap)="navigateTo('athlets')" [class.active]="_activatedUrl.indexOf('/athlets') === 0" class="side-label"></Label>
-                <Label [text]="'Options'|L" (tap)="navigateTo('options')" [class.active]="_activatedUrl === '/options'" class="side-label"></Label>
-<!--                <Label [text]="'Test'|L" (tap)="navigateTo('home')" [class.active]="_activatedUrl === '/home/test'" class="side-label"></Label>-->
-<!--                <Label [text]="'Test2'|L" (tap)="navigateTo('home/test2')" [class.active]="_activatedUrl === '/home/test'" class="side-label"></Label>-->
+                <StackLayout>
+                    <!--                <Label [text]="_activatedUrl"></Label>-->
+                    <Label [text]="'Home'|L" (tap)="navigateTo('home', {clearHistory: true})" [class.active]="_activatedUrl === '/home'" class="side-label"></Label>
+                    <Label [text]="'Competitions'|L" (tap)="navigateTo('/home/competitions')" [class.active]="_activatedUrl === '/home/competitions'" class="side-label"></Label>
+                </StackLayout>
                 <StackLayout class="m-10"></StackLayout>
-                <Label [text]="'Join to competition'|L" (tap)="openModal('competition')" class="side-label"></Label>
+                <StackLayout *ngIf="_competition.selected_competition">
+<!--                    <Label [text]="'Scan'|L" (tap)="navigateTo('scan')" [class.active]="_activatedUrl === '/scan'" class="side-label font-weight-bold"></Label>-->
+                    <Label [text]="'Athlets'|L" (tap)="navigateTo('/athlets')" [class.active]="_activatedUrl === '/athlets'" class="side-label"></Label>
+                </StackLayout>
                 <StackLayout class="m-10"></StackLayout>
+                <Label [text]="'Logout'|L" class="side-label" (tap)="onLogout()"></Label>
                 <Label [text]="'Back'|L" class="side-label" (tap)="onCloseDrawerTap()"></Label>
                 <Label [text]="'Exit'|L" class="side-label" (tap)="onExit()"></Label>
             </StackLayout>
