--- a/src/app/athlet/athlet-detail/athlet-detail.component.tns.html
+++ b/src/app/athlet/athlet-detail/athlet-detail.component.tns.html
@@ -54,11 +54,11 @@
         <ListView height="100%" [items]="athlet.checkpoints|orderBy:'created':true">
             <ng-template let-mark="item" let-i="index" let-odd="odd" let-even="even">
                 <GridLayout columns="*, auto" rows="*, *" class="p-l-5 p-r-5">
-                    <Label col="0" row="0" [text]="mark.key" style="font-weight: bold; font-size: 15em"></Label>
+                    <Label col="0" row="0" [text]="checkpoints[mark.order].title" style="font-weight: bold; font-size: 15em"></Label>
                     <Label col="0" row="1" [text]="mark.created|date:'dd.MM HH:mm:ss'"></Label>
                     <Label (tap)="onRemoveCp($event, mark)"
                            [class.scale-active]="i == tap_remove_index"
-                           [class.disabled]="mark.key != checkpoint?.key"
+                           [class.disabled]="mark.order != current_checkpoint?.order"
                            text="&#xf2ed;"
                            col="1"
                            row="0"
