--- a/src/app/scan/local-log/local-log.component.tns.html
+++ b/src/app/scan/local-log/local-log.component.tns.html
@@ -5,7 +5,7 @@
         <Label text="&#xf0c7;" class="far p-r-10"></Label>
     </ActionItem>
     <ActionItem [text]="'Upload to server'|L"
-                (tap)="options.upload()"
+                (tap)="onUpload()"
                 ios.position="right"
                 android.position="popup"></ActionItem>
 </ActionBar>
