--- a/src/app/web/theme/admin-layout/header/header.component.html
+++ b/src/app/web/theme/admin-layout/header/header.component.html
@@ -13,6 +13,9 @@
   <button mat-icon-button (click)="toggleFullscreen()" fxHide.lt-sm>
     <mat-icon>fullscreen</mat-icon>
   </button>
+  <a mat-icon-button href="/assets/data/race_org.latest.apk">
+    <mat-icon>mobile_screen_share</mat-icon>
+  </a>
 
 <!--  <app-notification fxHide.lt-sm></app-notification>-->
 
