--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,18 @@
-.side-title {
-  padding: 10;
-  text-align: center;
-}
-.side-label{
-  padding: 10;
-  font-size: 16;
-  &.active {
-    background-color: #aee406
-  }
-}
-.active {
-  background-color: #aee406
-}
+//.side-title {
+//  padding: 10;
+//  text-align: center;
+//}
+//.side-label{
+//  padding: 10;
+//  font-size: 16;
+//  &.active {
+//    background-color: #aee406
+//  }
+//}
+//
+//.active {
+//  background-color: #aee406
+//}
 
 
 
