--- a/src/app/enter/enter.component.tns.html
+++ b/src/app/enter/enter.component.tns.html
@@ -1,11 +1,21 @@
 <GridLayout rows="*,*" columns="*">
     <StackLayout row="0" col="1">
-        <Button text="Google" (tap)="auth.googleLogin()"></Button>
-        <Button text="Facebook" (tap)="auth.facebookLogin()"></Button>
-        <Button text="Phone"></Button>
+        <Button text="Google" (tap)="auth.googleLogin()" class="-primary"></Button>
+        <Button text="Facebook" (tap)="auth.facebookLogin()" class="-primary"></Button>
+        <Button text="Home" [nsRouterLink]="['home']" [isEnabled]="!!auth.user" class="-primary"></Button>
+        <GridLayout columns="*, 150" rows="auto">
+            <TextField col="0" row="0"
+                       text="{{getPhone()}}"
+                       (textChange)="onPhoneNumberChange($event)"
+                       (returnPress)="onPhoneNumberLogin()"
+                       hint="Номер телефона"
+                       maxLength="10"
+                       autocorrect="false"
+                       keyboardType="number"></TextField>
+            <Button (tap)="onPhoneNumberLogin()" col="1" row="0" text="Send sms"></Button>
+        </GridLayout>
     </StackLayout>
     <StackLayout row="1" col="2">
-        <TextField hint="Код соревнования"></TextField>
-        <Button text="Scan QR code"></Button>
+        <app-enter-secret></app-enter-secret>
     </StackLayout>
 </GridLayout>
