--- a/src/styles/core/_branding.scss
+++ b/src/styles/core/_branding.scss
@@ -1,11 +1,14 @@
 // ==================================================
-// Branding
+// BRANDING
 // ==================================================
 
 .matero-branding {
+  color: inherit;
   white-space: nowrap;
+  font-size: 16px;
 
   .matero-branding-logo-expanded {
+    width: 30px;
     height: 30px;
     margin-right: 10px;
     vertical-align: middle;
